manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-app
spec:
  parentRefs:
    - name: sample-app-gateway
  hostnames:
    - sample-app.yh.k8s.tsuru.run
  rules:
    - backendRefs:
        - name: sample-app
          port: 80
